--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,7 @@ spring.jpa.hibernate.ddl-auto = update
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
+spring.thymeleaf.mode=HTML5
 
 # Use spring.jpa.properties.* for Hibernate native properties (the prefix is
 # stripped before adding them to the entity manager)
